--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body></body>
+  
+  <head>
+    <title>Earth Day Project</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  
+  <body>
+  </body>
 </html>
