--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   
   <body>
-    <div id="earthImg"></div>
+    <div id="earthImg">
+      <h2 id="titleText">Earth Day!!!</div>
   </body>
 </html>
