--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   
   <body>
     <div id="earthImg">
-      <h2 id="titleText">Earth Day!!!</div>
+      <h1 id="titleText">Earth Day!!!</h1></div>
   </body>
 </html>
