--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   
   <body>
-    <div id="earthImg">
-      <h1 id="titleText">Earth Day!!!</h1></div>
+    <div id="earthImg"><h1 id="titleText">Earth Day!!!</h1></div>
+    
+     <div class="sectionTextTopMargin"><h1 class="sectionContentText">How do I feel when I recycle?</h1></div>
+    
+     <div class="sectionContentText"><h1 class="sectionContentText">Earth Day!!!</h1></div>
   </body>
 </html>
