--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div id="earthImg"><h1 id="titleText">Earth Day!!!</h1></div>
     
-     <div class="sectionTextTopMargin"><h1 class="sectionContentText">How do I feel when I recycle?</h1></div>
+     <div class="sectionContentDivider"><h1 class="sectionTextTopMargin">How do I feel when I recycle?</h1></div>
     
-     <div class="sectionContentText"><h1 class="sectionContentText">Earth Day!!!</h1></div>
+     <div class="sectionContentDivider"><h1 class="sectionContentText">Earth Day!!!</h1></div>
   </body>
 </html>
