--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Earth Day Project</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://buildtheearth.net/assets/img/site-logo-animated.gif">
   </head>
   
   <body>
